[package]
name = "wasm_playground"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "janosch/wasm" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross.git", branch = "janosch/wasm" }
console_error_panic_hook = "0.1"
cfg-if = "0.1"
log = "0.4"
wasm-logger = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["wee_alloc"]
